--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "snapchat-all-memories-downloader": "github:ToTheMax/Snapchat-All-Memories-Downloader"
   }
 }
